--- a/town_hall_2/index.html
+++ b/town_hall_2/index.html
@@ -44,9 +44,12 @@
 			<h1>Speaker of the Month</h1>
 			<article>
 				<h2>Fossil Threads in the Web of Life</h2>
-				<img src="images/sampson_dinosaur.jpg" alt="Scott Sampson with dinosaur">
-				<h3>February<br>
-				Scott Sampson</h3>
+				<figure>
+					<img src="images/sampson_dinosaur.jpg" alt="Scott Sampson with dinosaur">
+					<figcaption>Scott Sampson and friend</figcaption>
+				</figure>
+				<h2>February<br>
+				Scott Sampson</h2>
 				<p>What's 75 million years old and brand spanking new? A teenage Utahceratops! 
 				Come to the Saroyan, armed with your best dinosaur roar, when Scott Sampson, Research 
 				Curator at the Utah Museum of Natural History, steps to the podium. Sampson's research 
