--- a/town_hall_2/luncheons.html
+++ b/town_hall_2/luncheons.html
@@ -41,6 +41,68 @@
 			<h2>Individual luncheon tickets: $25</h2>
 			<p>A limited number of these tickets are available and can be purchased by calling 
 			559.555.1212. These tickets must be purchased by the Friday prior to the lecture.</p>
+			<figure>
+				<figcaption><h2 class="luncheon_heading">The luncheon schedule</h2></figcaption>
+				<table>
+					<thead>
+						<tr>
+							<th>Year</th>
+							<th>Date</th>
+							<th>Speaker</th>
+							<th>Cost</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td rowspan="2">2015</td>
+							<td>October 19</td>
+							<td>Jeffrey Toobin</td>
+							<td class="right">$25</td>
+						</tr>
+						<tr>
+							<td>November 16</td>
+							<td>Andress Ross Sorkin</td>
+							<td class="right">$25</td>
+						</tr>
+						
+						<tr>
+							<td rowspan="4">2016</td>
+							<td>January</td>
+							<td>Amy Chua</td>
+							<td class="right">$25</td>
+						</tr>
+						<tr>
+							<td>February</td>
+							<td>Scott Sampson</td>
+							<td class="right">$25</td>
+						</tr>
+						<tr>
+							<td>March 21</td>
+							<td>Carlos Eire</td>
+							<td class="right">$25</td>
+						</tr>
+						<tr>
+							<td>April 18</td>
+							<td>Ronan Tynan</td>
+							<td class="right">$25</td>
+						</tr>
+						<tr class="border_bottom">
+							<th colspan="3" class="right">Cost of 6 individual luncheon tickets</th>
+							<td class="right">$125</td>
+						</tr>
+						<tr class="border_bottom">
+							<th colspan="3" class="right">Cost of a season luncheon ticket</th>
+							<td class="right">$120</td>
+						</tr>
+					</tbody>
+					<tfoot>
+						<tr>
+							<th colspan="3">Savings</th>
+							<th>$30</th>
+						</tr>
+					</tfoot>
+				</table>
+			</figure>
  		</section>
 		<aside>
 			<h2>Guest speakers</h2>
@@ -53,6 +115,7 @@
 			<h3>February<br><a href="../speakers/sampson.html">Scott Sampson</a></h3>
 			<img src="images/sampson75.jpg" alt="Scott Sampson photo">
 		</aside>
+		
 	</main>
 	<footer>
 		<p>&copy; 2015, San Joaquin Valley Town Hall, Fresno, CA 93755</p>
