--- a/town_hall_2/tickets.html
+++ b/town_hall_2/tickets.html
@@ -33,22 +33,13 @@
 	</nav>
 	<main>
 		<section>
-			<h1>Become a Member</h1>
+			<h1>Order Form</h1>
     		<form action="register_account.html" method="get"
         		name="registration_form" id="registration_form">
     			<fieldset>
-	        		<legend>Registration Information</legend>
-	        		<label for="email">E-Mail:</label>
-	        		<input type="email" name="email" id="email" autofocus required><br>
-	        		<label for="password">Password:</label>
-	        		<input type="password" name="password" id="password" required
-	                   	   placeholder="At least 6 letters or numbers"
-	                   	   pattern="[a-zA-Z0-9]{6,}" title="Must be at least 6 alphanumeric characters"><br>
-	        		<label for="verify">Verify Password:</label>
-	        		<input type="password" name="verify" id="verify" required><br>
-    			</fieldset>
-    			<fieldset>
         			<legend>Member Information</legend>
+        			<label for="email">E-Mail:</label>
+	        		<input type="email" name="email" id="email" autofocus required><br>
         			<label for="first_name">First Name:</label>
 					<input type="text" name="first_name" id="first_name" required><br>
 					<label for="last_name">Last Name:</label>
@@ -67,17 +58,55 @@
 				       	   pattern="\d{3}[\-]\d{3}[\-]\d{4}" title="Must be 999-999-999 format"><br>
 				</fieldset>
 				<fieldset>
-					<legend>Membership Information</legend>
-					<label for="membership_type">Membership Type:</label>
-					<select name="membership_type" id="membership_type">
-				    	<option value="j">Junior</option>
-				    	<option value="r">Regular</option>            
-				    	<option value="c">Charter</option>
+					<legend>Ordering Information</legend>
+					<label for="order_type">Order type:</label>
+					<select name="order_type" id="order_type">
+						<option value="m">Member Package</option>
+						<option value="d">Donor Package</option>
+						<option value="s">Single Ticket</option>
 					</select><br>
-					<label for="starting_date">Starting Date:</label>
-					<input type="date" name="starting_date" id="starting_date" required><br>
-					<label for="tickets">Tickets for Guests:</label>
-					<input type="number" name="tickets" id="tickets" value="2" min="1" max="4" placeholder="from 1 to 4"><br>
+					<label for="number_of_ticket">Number of ticket:</label>
+					<input type="text" name="number_of_ticket" id="number_of_ticket" placeholder="Number of single tickets"><br>
+				</fieldset>
+				<fieldset id="paymen">
+					<legend>Paymen Method</legend>
+					<input type="radio" name="payment_method" id="bill" value="bill"> 
+					<label for="bill">Bill Me</label>
+					<input type="radio" name="payment_method" id="credit" value="credit">
+					<label for="credit">Credit Card</label>
+				</fieldset>
+				<fieldset>
+					<legend>Credit Card Information</legend>
+					<label for="card_type">Card Type:</label>
+					<select name="card_type" id="card_type">
+				    	<option value="v">Visa</option>
+				    	<option value="m">MasterCard</option>            
+				    	<option value="d">Discover</option>
+					</select><br>
+					<label for="card_number">Card Number:</label>
+					<input type="card_number" name="card_number" id="card_number" placeholder="16 digits"  required><br>
+					<label for="month">Expiration date:</label>
+						<select name="month" id="month">
+							<option value="1">January</option>
+							<option value="2">February</option>
+							<option value="3">March</option>
+							<option value="4">April</option>
+							<option value="5">May</option>
+							<option value="6">June</option>
+							<option value="7">July</option>
+							<option value="8">August</option>
+							<option value="9">September</option>
+							<option value="10">October</option>
+							<option value="11">November</option>
+							<option value="12">December</option>
+						</select>
+						<select name="year" id="year">
+							<option value="2012">2015</option>
+							<option value="2013">2016</option>
+							<option value="2014">2017</option>
+							<option value="2015">2018</option>
+							<option value="2016">2019</option>
+						</select><br>
 				</fieldset>
 				<fieldset id="buttons">
 					<legend>Submit Your Membership</legend>
